--- a/app/views/devise/menu/_login_items.html.erb
+++ b/app/views/devise/menu/_login_items.html.erb
@@ -1,4 +1,5 @@
 <% if user_signed_in? %>
+    Logged in as <strong><%= current_user.email %></strong>
     <li>
       <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
     </li>
